# BART-Survival

./: .gitignore  LICENSE  README.md  __init__,py  _config.yml  artf1.xlsx  artf2_simple21-22.xlsx  artf3_complex12.xlsx  artf_param.xlsx  notes.Md  notes.txt  output.docx  paper.bib  paper.crossref  paper.md  paper_full.md  pyproject.toml  readme.docx  readme_junk.md  requirements.txt  todo.Md  todo.md  todo.txt  ~$readme.docx
.github/workflows/: draft-pdf.yaml
R/: bart_1.R  bart_2.R  bart_3.R  test.r
data/: exp1_tmp.csv  exp1_tmp_out2.csv  exp2_tmp.csv  exp2_tmp_out2.csv  sv_time1.csv
docs/: readme.md
docs/abstract/: outline.Md
docs/source/: api.rst  conf.py  index.rst  methods.md  surv_bart.rst
examples/: example1.html  example1.ipynb  example2.html  example2.ipynb
jats/: paper.jats
notebook/: __init__.py  _conditions1.py  _functions1.py  clean_and_plot.ipynb  compare_se_loglog.py  example2.ipynb  functions1.ipynb  functions1_1.ipynb  functions2.ipynb  functions2_2.ipynb  functions3.ipynb  pos_vis_param_20240520.ipynb  post_vis_12_20240530.ipynb  presentation.ipynb  sim_1.ipynb  sim_2.ipynb  test_bart_surv.ipynb  test_manager.ipynb  tmp.md
py/: _conditions1.py  _conditions2.py  _functions1.py  _functions3.py  _functions_params.py  _loggers1.py  _loggers2.py  _param1.py  _param2.py  _plot_fx.py  _shared_funcs.py  _sim_iter1.py  _sim_iter2.py  _sim_iter3.py  complex_123.py  complex_3.py  param_1.py  simple_12.py  test.py  test_bart.py  test_bart_surv.py  test_bart_surv2.py
src/: brt_adj.py  sim_adj.py
tests/: test.ipynb  test_bart_survival.py
(+5 files in other folders)
